# unstable-reader-bot

./: .env.example  .gitignore  discord_bot.py  main.py  pyproject.toml  readme.md  requirements.txt
